--- a/WebApp/WebApp/Management/assets/css/tableEditor.css
+++ b/WebApp/WebApp/Management/assets/css/tableEditor.css
@@ -50,6 +50,6 @@ input {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #212dbb;
+    background-color: rgb(91, 157, 217);
     color: white;
 }
